corrects bad test arg for sbt build in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ test:
   stage: test
   image: openjdk:11
   script:
-    - sbt text coverageReport
+    - sbt test coverageReport
 
 publish-snapshot:
   stage: publish
