--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,14 +22,6 @@ before_script:
   - apt-get update -yqq
   - apt-get install -yqq sbt
   - sbt sbtVersion
-  - 'which ssh-agent || ( apt-get install -qq openssh-client )'
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo "$SSH_PRIVATE_KEY")
-  - mkdir -p ~/.ssh
-  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
-  - git remote set-url origin git@gitlab.mdcatapult.io:$CI_PROJECT_PATH.git
-  - git config --global user.email "${GIT_RELEASE_EMAIL}"
-  - git config --global user.name "${GIT_RELEASE_USER}"
 
 test:
   stage: test
@@ -57,6 +49,22 @@ release-master:
     variables:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
   image: openjdk:11
+  before_script:
+    - apt-get update -yqq
+    - apt-get install -yqq apt-transport-https ca-certificates
+    - echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
+    - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+    - apt-get update -yqq
+    - apt-get install -yqq sbt
+    - sbt sbtVersion
+    - 'which ssh-agent || ( apt-get install -qq openssh-client )'
+    - eval $(ssh-agent -s)
+    - ssh-add <(echo "$SSH_PRIVATE_KEY")
+    - mkdir -p ~/.ssh
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - git remote set-url origin git@gitlab.mdcatapult.io:$CI_PROJECT_PATH.git
+    - git config --global user.email "${GIT_RELEASE_EMAIL}"
+    - git config --global user.name "${GIT_RELEASE_USER}"
   script:
     - git checkout master
     - git pull origin master
