--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ cache:
 
 before_script:
   - apt-get update -yqq
-  - apt-get install -yqq apt-transport-https ca-certificates
+  - apt-get install -yqq apt-transport-https ca-certificates gnupg
   - echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
   - apt-get update -yqq
@@ -31,7 +31,7 @@ before_script:
 
 test:
   stage: test
-  image: openjdk:14-buster
+  image: openjdk:14-slim
   variables:
     MONGO_HOST: mongo
     MONGO_DATABASE: prefetch-test
@@ -52,7 +52,7 @@ publish-snapshot:
   except:
     variables:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
-  image: openjdk:14
+  image: openjdk:14-slim
   script:
     - sbt publish
   only:
@@ -63,7 +63,7 @@ release-master:
   except:
     variables:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
-  image: openjdk:14-buster
+  image: openjdk:14-slim
   before_script:
     - apt-get update -yqq
     - apt-get install -yqq apt-transport-https ca-certificates
