--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -11,7 +11,7 @@ mongo {
   collection = "common"
   collection = ${?MONGO_COLLECTION}
   connection {
-    hosts = ["localhost",${?MONGO_HOST}]
+    hosts = [${?MONGO_HOST}]
     username = "admin"
     username = ${?MONGO_USERNAME}
     password = "admin"
