--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,11 +88,12 @@ release-master:
     - git checkout master
     - git pull origin master
     - sbt "release with-defaults"
-    - export RELEASE_TAG=$(git describe --abbrev=0)
+    - export RELEASE_TAG=$(git describe --tags --abbrev=0)
+    - export GIT_LOG=$(git log $RELEASE_TAG..HEAD --oneline --no-merges)
     - >
       curl --header 'Content-Type: application/json'
       --header "PRIVATE-TOKEN: $GIT_RELEASE_TOKEN"
-      --data "{ \"name\": \"$RELEASE_TAG\", \"tag_name\": \"$RELEASE_TAG\", \"description\": \"Automated CI Release of $RELEASE_TAG\" }"
+      --data "{ \"name\": \"$RELEASE_TAG\", \"tag_name\": \"$RELEASE_TAG\", \"description\": \"Automated CI Release of $RELEASE_TAG\n\n$GIT_LOG\" }"
       --request POST https://gitlab.mdcatapult.io/api/v4/projects/$CI_PROJECT_ID/releases
     - git checkout develop
     - git pull
