--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,9 +87,10 @@ release-master:
   script:
     - git checkout master
     - git pull origin master
+    - export PREVIOUS_TAG=$(git describe --tags --abbrev=0)
+    - export GIT_LOG=$(git log $PREVIOUS_TAG..HEAD --oneline --no-merges)
     - sbt "release with-defaults"
     - export RELEASE_TAG=$(git describe --tags --abbrev=0)
-    - export GIT_LOG=$(git log $RELEASE_TAG..HEAD --oneline --no-merges)
     - >
       curl --header 'Content-Type: application/json'
       --header "PRIVATE-TOKEN: $GIT_RELEASE_TOKEN"
