Integration test read and write ner and occurence objects

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -10,6 +10,8 @@ mongo {
   database = ${?MONGO_DATABASE}
   collection = "common"
   collection = ${?MONGO_COLLECTION}
+  ner-collection = "documents_ner"
+  ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
     hosts = [${?MONGO_HOST}]
     username = "admin"
