--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ test:
     RABBITMQ_USERNAME: guest
     RABBITMQ_PASSWORD: guest
   script:
-    - sbt clean coverage test it:test coverageReport coverageOff
+    - sbt +clean coverage +test +it:test coverageReport coverageOff
   except:
     variables:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
@@ -58,7 +58,7 @@ publish-snapshot:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
   image: openjdk:14-slim
   script:
-    - sbt publish
+    - sbt +publish
   only:
     - develop
 
@@ -89,7 +89,7 @@ release-master:
     - git pull origin master
     - export PREVIOUS_TAG=$(git describe --tags --abbrev=0)
     - export GIT_LOG=$(echo "$(git log $PREVIOUS_TAG..HEAD --oneline --no-merges)" | awk -v ORS='  \\n' '1')
-    - sbt "release with-defaults"
+    - sbt "release cross with-defaults"
     - export RELEASE_TAG=$(git describe --tags --abbrev=0)
     - >
       curl --header 'Content-Type: application/json'
