--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,11 @@ test:
     RABBITMQ_USERNAME: guest
     RABBITMQ_PASSWORD: guest
   script:
-    - sbt +clean coverage +test +it:test coverageReport coverageOff
+    - sbt +clean coverage +test +it:test coverageReport
+  artifacts:
+    name: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
+    paths:
+      - target/scala-2.13/scoverage-report/
   except:
     variables:
       - $CI_COMMIT_MESSAGE =~ /^Setting version to.*/
