Upgrade Scala to 2.13.3 and other library versions and sbt to 1.3.13.  All tests can now be run without setting any environment variables - just need to ensure that /etc/hosts has mongo set to 127.0.0.1

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -13,10 +13,10 @@ mongo {
   ner-collection = "documents_ner"
   ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
-    hosts = [${?MONGO_HOST}]
-    username = "admin"
+    hosts = ["mongo"]
+    username = "doclib"
     username = ${?MONGO_USERNAME}
-    password = "admin"
+    password = "doclib"
     password = ${?MONGO_PASSWORD}
     port = 27017
     port = ${?MONGO_PORT}
