--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,11 +25,11 @@ cache:
     - "sbt-cache/.sbtboot"
     - "sbt-cache/target"
 
+default:
+  image: registry.mdcatapult.io/informatics/docker-images/ci:scala-v1.1.3
+
 test:
   stage: test
-  image: openjdk:14-slim
-  tags:
-    - wopr
   variables:
     MONGO_HOST: mongo
     MONGO_DATABASE: prefetch-test
@@ -39,14 +39,6 @@ test:
     RABBITMQ_HOST: rabbitmq
     RABBITMQ_USERNAME: guest
     RABBITMQ_PASSWORD: guest
-  before_script:
-    - apt-get update -yqq
-    - apt-get install -yqq apt-transport-https ca-certificates gnupg
-    - echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list
-    - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
-    - apt-get update -yqq
-    - apt-get install -yqq sbt
-    - sbt sbtVersion
   script:
     - sbt +clean coverage +test +it:test coverageReport
   artifacts:
@@ -71,7 +63,6 @@ publish-snapshot:
 
 release:
   stage: publish
-  image: registry.mdcatapult.io/informatics/docker-images/ci:scala-v1.1.3
   tags:
     - wopr
   script:
