AbstractConsumer now creates a ConsumerVersion object rather than merging version.conf into application.conf.  AbstractConsumer is integration tested on its succes path.

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -24,3 +24,36 @@ mongo {
     database = ${?MONGO_AUTH_DB}
   }
 }
+
+op-rabbit {
+  consumer-name = "echo"
+  topic-exchange-name = "amq.topic"
+  channel-dispatcher = "op-rabbit.default-channel-dispatcher"
+  default-channel-dispatcher {
+    type = Dispatcher
+    executor = "fork-join-executor"
+    fork-join-executor {
+      parallelism-min = 2
+      parallelism-factor = 2.0
+      parallelism-max = 4
+    }
+    throughput = 1
+  }
+  connection {
+    virtual-host = "doclib"
+    virtual-host = ${?RABBITMQ_VHOST}
+    hosts = [${?RABBITMQ_HOST}]
+    username = "doclib"
+    username = ${?RABBITMQ_USERNAME}
+    password = "doclib"
+    password = ${?RABBITMQ_PASSWORD}
+    port = 5672
+    ssl = false
+    connection-timeout = 30s
+  }
+}
+
+upstream {
+  concurrent: 1
+  queue: "echo"
+}
