--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -13,7 +13,7 @@ mongo {
   ner-collection = "documents_ner"
   ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
-    hosts = ["mongo"]
+    hosts = [${?MONGO_HOST}]
     username = "doclib"
     username = ${?MONGO_USERNAME}
     password = "doclib"
