Updates scala queue and fixes integration tests.

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -6,10 +6,10 @@ akka {
 }
 
 mongo {
-  database = "doclib-test"
-  database = ${?MONGO_DATABASE}
-  collection = "common"
-  collection = ${?MONGO_COLLECTION}
+  doclib-database = "doclib-test"
+  doclib-database = ${?MONGO_DOCLIB_DATABASE}
+  documents-collection = "common"
+  documents-collection = ${?MONGO_DOCUMENTS_COLLECTION}
   ner-collection = "documents_ner"
   ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
@@ -21,7 +21,7 @@ mongo {
     port = 27017
     port = ${?MONGO_PORT}
     database = "admin"
-    database = ${?MONGO_AUTH_DB}
+    database = ${?MONGO_AUTHSOURCE}
   }
 }
 
@@ -53,7 +53,8 @@ op-rabbit {
   }
 }
 
-upstream {
-  concurrent: 1
+consumer {
+  concurrency: 1
+  name: "echo"
   queue: "echo"
 }
