Set exchange in consumer.exchange and sanitize actor system name.

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -13,7 +13,9 @@ mongo {
   ner-collection = "documents_ner"
   ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
-    hosts = [${?MONGO_HOST}]
+    hosts = []
+    hosts.0 = "localhost"
+    hosts.0 = ${?MONGO_HOST}
     username = "doclib"
     username = ${?MONGO_USERNAME}
     password = "doclib"
@@ -57,4 +59,5 @@ consumer {
   concurrency: 1
   name: "echo"
   queue: "echo"
+  exchange: "doclib"
 }
