Revert exchange configuration.

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -29,7 +29,7 @@ mongo {
 
 op-rabbit {
   consumer-name = "echo"
-  topic-exchange-name = "amq.topic"
+  topic-exchange-name = "doclib"
   channel-dispatcher = "op-rabbit.default-channel-dispatcher"
   default-channel-dispatcher {
     type = Dispatcher
@@ -59,5 +59,4 @@ consumer {
   concurrency: 1
   name: "echo"
   queue: "echo"
-  exchange: "doclib"
 }
