--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ test:
   stage: test
   variables:
     MONGO_HOST: mongo
+    MONGO_PORT: 27017
     MONGO_DATABASE: prefetch-test
     MONGO_COLLECTION: documents
     MONGO_USERNAME: admin
