adds hosts config options and trait for handler deps

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -17,6 +17,9 @@ mongo {
     port = 27017
     database = "admin"
   }
+  read-limit = 100
+  write-limit = 50
+
 }
 
 op-rabbit {
@@ -34,6 +37,8 @@ op-rabbit {
     throughput = 1
   }
   connection {
+    hosts = []
+    hosts.0 = "localhost"
     virtual-host = "doclib"
     username = "doclib"
     password = "doclib"
@@ -45,20 +50,20 @@ op-rabbit {
 
 doclib {
   supervisor {
-    queue: "supervisor"
+    queue = "supervisor"
   }
 }
 
 version {
-    number : 1
-    major: 1
-    minor: 1
-    patch: 1
-    hash: 1
+  number = 1
+  major = 1
+  minor = 1
+  patch = 1
+  hash = 1
 }
 
 consumer {
-  concurrency: 1
-  name: "echo"
-  queue: "echo"
+  concurrency = 1
+  name = "echo"
+  queue = "echo"
 }
