--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -7,15 +7,25 @@ akka {
 
 mongo {
   doclib-database = "doclib-test"
+  doclib-database = ${?MONGO_DOCLIB_DATABASE}
   documents-collection = "common"
+  documents-collection = ${?MONGO_DOCUMENTS_COLLECTION}
   ner-collection = "documents_ner"
+  ner-collection = ${?MONGO_NER_COLLECTION}
   connection {
     hosts = []
     hosts.0 = "localhost"
+    host.0 = ${?MONGO_HOST}
     username = "doclib"
+    username = ${?MONGO_USERNAME}
     password = "doclib"
+    password = ${?MONGO_PASSWORD}
     port = 27017
+    port = ${?MONGO_PORT}
     database = "admin"
+    database = ${?MONGO_AUTHSOURCE}
+    srv = false
+    srv = ${?MONGO_SRV}
   }
   read-limit = 100
   write-limit = 50
@@ -39,8 +49,12 @@ op-rabbit {
     hosts = []
     hosts.0 = "localhost"
     virtual-host = "doclib"
+    virtual-host = ${?RABBITMQ_VHOST}
+    hosts = [${?RABBITMQ_HOST}]
     username = "doclib"
+    username = ${?RABBITMQ_USERNAME}
     password = "doclib"
+    password = ${?RABBITMQ_PASSWORD}
     port = 5672
     ssl = false
     connection-timeout = 30s
@@ -55,10 +69,10 @@ doclib {
 
 version {
   number = 1
-  major = 1
-  minor = 1
-  patch = 1
-  hash = 1
+  major = 2
+  minor = 3
+  patch = 4
+  hash = 5
 }
 
 consumer {
