amends test config

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -15,7 +15,7 @@ mongo {
   connection {
     hosts = []
     hosts.0 = "localhost"
-    host.0 = ${?MONGO_HOST}
+    hosts.0 = ${?MONGO_HOST}
     username = "doclib"
     username = ${?MONGO_USERNAME}
     password = "doclib"
