--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,8 @@ default:
 
 test:
   stage: test
+  tags:
+    - wopr
   variables:
     MONGO_HOST: mongo
     MONGO_PORT: 27017
@@ -64,6 +66,8 @@ publish-snapshot:
 
 release:
   stage: publish
+  tags:
+    - wopr
   script:
     - /scripts/release.sh -b -r develop
   only:
