--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ variables:
   MONGO_INITDB_ROOT_PASSWORD: admin
   RABBITMQ_DEFAULT_USER: guest
   RABBITMQ_DEFAULT_PASS: guest
+  RABBITMQ_PORT: 5672
 
 cache:
   key: "${CI_COMMIT_REF_SLUG}"
