--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.6"
 services:
   mongo:
-    image: mongo:latest
+    image: mongo:5.0.26
     ports:
       - 27017:27017
     environment:
